Fixing compiler warnings in cxf-rt-rs-security-sso-saml